changed the directory of images

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <body>
     <main class="main-container"><h1>An error occured</h1></main>
     <div class="overlay"></div>
+    <!-- <img src="" alt="" /> -->
 
     <script src="./js/index.js" type="module"></script>
   </body>
