--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Js script link  -->
   </head>
   <body>
-    <main class="main-container"><h1>An error occured</h1></main>
+    <main class="main-container"><h1>Loading...</h1></main>
     <div class="overlay"></div>
     <!-- <img src="" alt="" /> -->
 
