created a mongodatabase in which frEnd and bEnd are connected to

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="./style/cartPage.css" />
     <link rel="stylesheet" href="./style/404.css" />
     <link rel="stylesheet" href="./style/AP_category.css" />
+    <link rel="stylesheet" href="./style/signup.css" />
 
     <!-- Js script link  -->
   </head>
@@ -35,5 +36,6 @@
     <!-- <img src="" alt="" /> -->
 
     <script src="./js/index.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
   </body>
 </html>
