implementing the sign-in and register page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="./style/404.css" />
     <link rel="stylesheet" href="./style/AP_category.css" />
     <link rel="stylesheet" href="./style/signup.css" />
+    <link rel="stylesheet" href="./style/kids.css" />
 
     <!-- Js script link  -->
   </head>
