--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RICHY</title>
-    <!-- <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css" /> -->
 
     <link
       rel="stylesheet"
@@ -14,10 +13,12 @@
     />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap"
       rel="stylesheet"
     />
+
     <!-- <link rel="stylesheet" href=".style.css" /> -->
 
     <link rel="stylesheet" href="./style/style.css" />
@@ -27,6 +28,7 @@
     <link rel="stylesheet" href="./style/AP_category.css" />
     <link rel="stylesheet" href="./style/signup.css" />
     <link rel="stylesheet" href="./style/kids.css" />
+    <link rel="stylesheet" href="./style/placeOrderScreen.css" />
 
     <!-- Js script link  -->
   </head>
