--- a/OrdersPage.html
+++ b/OrdersPage.html
@@ -213,7 +213,7 @@
 
                             <div class="Return-container-contentTxtbox">
                                 <div class="Return-container-contentTxtQ">
-                                    <h4 class="Return-container-contentTxtQh4">Q.What payment options will be available?>
+                                    <h4 class="Return-container-contentTxtQh4">Q.What payment options will be available?
                                         <div class="div">
                                             <i class=" fas fa-plus Return-container-contentTxtQFont"></i>
                                         </div>
