--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <link rel="stylesheet" href="./style/AP_category.css" />
     <link rel="stylesheet" href="./style/signup.css" />
     <link rel="stylesheet" href="./style/kids.css" />
-    <!-- <link rel="stylesheet" href="./style/placeOrderScreen.css" />
+    <link rel="stylesheet" href="./style/placeOrderScreen.css" />
     <link rel="stylesheet" href="./style/faq.css" />
-    <link rel="stylesheet" href="./style/Return.css" /> -->
+    <link rel="stylesheet" href="./style/Return.css" />
 
     <!-- Js script link  -->
   </head>
